Fix:		Remove !important statements preventing forms to implement dark mode

--- a/djangocms_admin_style/sass/settings/_cms.scss
+++ b/djangocms_admin_style/sass/settings/_cms.scss
@@ -46,9 +46,10 @@ $gray-super-lightest: var(--dca-gray-super-lightest); //;
    :root {
        --dca-white: #2A2C2E;
        --dca-black: #FFF;
+       --dca-primary: #58D1FC;
        --dca-gray: #999; //$gray-light;
        --dca-gray-lightest: #444; //$gray-darkest;
-       --dca-gray-lighter: #777; //$gray-darker;
+       --dca-gray-lighter: #666; //$gray-darker;
        --dca-gray-light: #888; // $gray-light;
        --dca-gray-darker: #aaa; //$gray;
        --dca-gray-darkest: #eee; // $gray-lighter;
